# mane3d

./: .gitignore  .gitmodules  .luarc.json  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  build.bat  check.bat  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  wrangler.toml
.github/workflows/: check.yml  deploy-playground.yml
docs/: building.md  hot-reload-design.md  lua-binding-design.md  mane3d-rhythm-plan-v3-final.md
examples/: breakout.lua  deferred.lua  hello.lua  imgui_test.lua  license.lua  lighting.lua  main.c  main.lua  model.lua  raytracer.lua  rendering.lua  simple_triangle.lua  triangle.lua  util.lua
examples/b2d/: camera.lua  draw.lua  init.lua  test_all_samples.lua  test_ball_and_chain.lua  test_bounce_house.lua  test_breakable_joint.lua  test_cantilever.lua  test_chain_shape.lua  test_contact_event.lua  test_convex_hull.lua  test_conveyor_belt.lua  test_doohickey.lua  test_door.lua  test_driving.lua  test_explosion.lua  test_filter_joint.lua  test_gear_lift.lua  test_headless.lua  test_joint_separation.lua  test_kinematic.lua  test_motion_locks.lua  test_motor_joint.lua  test_mover.lua  test_offset_shapes.lua  test_pinball.lua  test_pivot.lua  test_prismatic_joint.lua  test_ragdoll.lua  test_rolling_resistance.lua  test_scissor_lift.lua  test_sensor_funnel.lua  test_single_sample.lua  test_soft_body.lua  test_top_down_friction.lua  test_wheel_joint.lua  test_wind.lua
examples/b2d/samples/: arch.lua  bad_body.lua  bad_steiner.lua  ball_and_chain.lua  barrel.lua  body_move.lua  body_type.lua  bounce_house.lua  breakable_joint.lua  bridge.lua  cantilever.lua  capsule_stack.lua  card_house.lua  cart.lua  cast_world.lua  chain_drop.lua  chain_link.lua  chain_shape.lua  chain_slide.lua  circle_impulse.lua  circle_stack.lua  cliff.lua  compound_benchmark.lua  compound_shapes.lua  confined.lua  contact_event.lua  convex_hull.lua  conveyor_belt.lua  distance_joint.lua  doohickey.lua  door.lua  double_domino.lua  driving.lua  drop.lua  ellipse.lua  explosion.lua  falling_hinges.lua  filter_joint.lua  foot_sensor.lua  friction.lua  (+60 more)
examples/deferred/: init.lua
examples/hakonotaiatari/: LICENSE  audio.lua  camera.lua  const.lua  cube.lua  enemy.lua  field.lua  game.lua  init.lua  input.lua  particle.lua  player.lua  record.lua  renderer.lua  title.lua  tutorial.lua
examples/hakonotaiatari/scripts/: extract_wav_from_exe.py  kst32b_to_lua.py
examples/rendering/: init.lua  light.lua  lighting.lua
examples/rhythm/: const.lua  init.lua
examples/rhythm/audio/: manager.lua
examples/rhythm/bms/: base36.lua  converter.lua  encoding.lua  parser.lua  types.lua
examples/rhythm/core/: conductor.lua  gauge.lua  judge.lua  scoring.lua  timing_map.lua
examples/rhythm/game/: playfield.lua  state.lua
examples/rhythm/input/: handler.lua
examples/rhythm/render/: effect.lua  lane.lua  note.lua  result.lua  ui.lua
examples/rhythm/song/: scanner.lua
examples/rhythm/test/: run_tests.lua  test_base36.lua  test_conductor.lua  test_converter.lua  test_encoding.lua  test_gauge.lua  test_integration.lua  test_judge.lua  test_parser.lua  test_scoring.lua  test_timing_map.lua
examples/rhythm/test/fixtures/: bpm_change.bms  measure_length.bms  simple.bms
examples/rhythm/ui/: select.lua
lib/: glm.lua  gpu.lua  headless_app.lua  hotreload.lua  log.lua  notify.lua  render_pass.lua  render_pipeline.lua  shader.lua  texture.lua  util.lua
manifests/: README.md  b2d.yaml  bc7enc.yaml  imgui.yaml  sokol_app.yaml  sokol_audio.yaml  sokol_debugtext.yaml  sokol_gfx.yaml  sokol_gl.yaml  sokol_glue.yaml  sokol_log.yaml  sokol_shape.yaml  sokol_time.yaml  stb_image.yaml
playground/: docs.ts  editor.ts  gist.ts  main.ts  style.css  wasm.ts
public/: player.html
scripts/: bam2egg.py  build-ci.sh  build.bat  build_bindings.bat  egg2lua.py  gen_box2d.py  gen_from_manifest.py  gen_imgui.py  gen_ir_box2d.py  gen_ir_cli.py  gen_ir_imgui.py  gen_licenses.py  gen_lua.py  gen_symbols.py  libraries.json  run_tests.bat  run_tests.sh  test.bat  test_samples.sh
src/: bc7enc_lua.cpp  box2d_task.c  encoding_lua.c  imgui_sokol.cpp  mane3d_lua.c  mane3d_lua.h  miniaudio_lua.c  sokol_impl.c  stb_image_lua.c
tests/: test_runner.c
types/: imgui_sokol.lua  shdc.lua  sokol.lua
